--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.servertechno.logitrack"
         minSdkVersion 19
@@ -27,7 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-location:10.2.1'
-    compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.jd-alexander:library:1.1.0'
     testCompile 'junit:junit:4.12'
